force-app/main/default/objects/Asset__c/fields/VG_Orbit__c.field-meta.xml
<CustomField>
    <fullName>VG_Orbit__c</fullName>
    <label>Orbit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ballistic</fullName>
            </value>
            <value>
                <fullName>Elliptical</fullName>
            </value>
            <value>
                <fullName>Escape</fullName>
            </value>
            <value>
                <fullName>GEO</fullName>
            </value>
            <value>
                <fullName>GTO</fullName>
            </value>
            <value>
                <fullName>Interplanetary</fullName>
            </value>
            <value>
                <fullName>L2 - (Earth Sun)</fullName>
            </value>
            <value>
                <fullName>L2 - Lissajous</fullName>
            </value>
            <value>
                <fullName>LEO (1200-1600km)</fullName>
            </value>
            <value>
                <fullName>LEO (400-800km)</fullName>
            </value>
            <value>
                <fullName>LEO - Other</fullName>
            </value>
            <value>
                <fullName>Lunar</fullName>
            </value>
            <value>
                <fullName>MEO</fullName>
            </value>
            <value>
                <fullName>Molnyia</fullName>
            </value>
            <value>
                <fullName>Molnyia/Tundra</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SSTO</fullName>
            </value>
            <value>
                <fullName>Sub Orbital/Ballistic</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>