force-app/main/default/objects/Asset__c/fields/VG_Orbital_Position__c.field-meta.xml
<CustomField>
    <fullName>VG_Orbital_Position__c</fullName>
    <label>Orbital Position(°, +ve E, -ve W, or km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>