force-app/main/default/objects/Asset__c/fields/VG_Other_SI__c.field-meta.xml
<CustomField>
    <fullName>VG_Other_SI__c</fullName>
    <label>TSI Other</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>