force-app/main/default/objects/Asset__c/fields/VG_Payload__c.field-meta.xml
<CustomField>
    <fullName>VG_Payload__c</fullName>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>