force-app/main/default/objects/Asset__c/fields/VG_Payload_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>VG_Payload_Manufacturer__c</fullName>
    <label>Payload Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AIRBUS DEFENCE AND SPACE</fullName>
            </value>
            <value>
                <fullName>ANTRIX</fullName>
            </value>
            <value>
                <fullName>BOEING SATELLITE SYSTEMS</fullName>
            </value>
            <value>
                <fullName>CAST</fullName>
            </value>
            <value>
                <fullName>CONAE</fullName>
            </value>
            <value>
                <fullName>ENERGYIA</fullName>
            </value>
            <value>
                <fullName>GILMOUR AEROSPACE</fullName>
            </value>
            <value>
                <fullName>GOMSPACE</fullName>
            </value>
            <value>
                <fullName>IAI</fullName>
            </value>
            <value>
                <fullName>JSC RESHETNEV ISS</fullName>
            </value>
            <value>
                <fullName>KARI - Korea Aerospace Research Institute</fullName>
            </value>
            <value>
                <fullName>LAVOCHKIN</fullName>
            </value>
            <value>
                <fullName>LOCKHEED MARTIN CORPORATION</fullName>
            </value>
            <value>
                <fullName>Lockheed Martin Space Systems</fullName>
            </value>
            <value>
                <fullName>MAXAR (SSL)</fullName>
            </value>
            <value>
                <fullName>MDA</fullName>
            </value>
            <value>
                <fullName>MELCO</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Northrop Grumman Innovation Systems (NGIS)</fullName>
            </value>
            <value>
                <fullName>OHB Italia</fullName>
            </value>
            <value>
                <fullName>ORBITAL ATK</fullName>
            </value>
            <value>
                <fullName>SATREVOLUTION</fullName>
            </value>
            <value>
                <fullName>SITAEL S.P.A.</fullName>
            </value>
            <value>
                <fullName>SPACEX</fullName>
            </value>
            <value>
                <fullName>SSL</fullName>
            </value>
            <value>
                <fullName>SURREY SATELLITES TECHNOLOGY</fullName>
            </value>
            <value>
                <fullName>TBA</fullName>
            </value>
            <value>
                <fullName>THALES ALENIA SPACE</fullName>
            </value>
            <value>
                <fullName>VIRGIN ORBIT</fullName>
            </value>
            <value>
                <fullName>VNIIEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>