force-app/main/default/objects/Asset__c/fields/VG_Platform_AOCS__c.field-meta.xml
<CustomField>
    <fullName>VG_Platform_AOCS__c</fullName>
    <label>Platform, AOCS</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>