force-app/main/default/objects/Asset__c/fields/VG_Platform_C_and_C__c.field-meta.xml
<CustomField>
    <fullName>VG_Platform_C_and_C__c</fullName>
    <label>Platform, C and C</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>