force-app/main/default/objects/Asset__c/fields/VG_Platform_Power__c.field-meta.xml
<CustomField>
    <fullName>VG_Platform_Power__c</fullName>
    <label>Platform, Power</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>