force-app/main/default/objects/Asset__c/fields/VG_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>VG_Policy_Number__c</fullName>
    <label>Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>