force-app/main/default/objects/Asset__c/fields/VG_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>VG_Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>