force-app/main/default/objects/Asset__c/fields/VG_Prime_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>VG_Prime_Manufacturer__c</fullName>
    <label>Launcher Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AIRBUS DEFENCE AND SPACE</fullName>
            </value>
            <value>
                <fullName>Blue Origin LLC</fullName>
            </value>
            <value>
                <fullName>CALT</fullName>
            </value>
            <value>
                <fullName>GILMOUR AEROSPACE</fullName>
            </value>
            <value>
                <fullName>IHI Corporation</fullName>
            </value>
            <value>
                <fullName>ISRO</fullName>
            </value>
            <value>
                <fullName>KHRUNICHEV</fullName>
            </value>
            <value>
                <fullName>LOCKHEED MARTIN CORPORATION</fullName>
            </value>
            <value>
                <fullName>MHI</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Northrop Grumman Innovation Systems (NGIS)</fullName>
            </value>
            <value>
                <fullName>PROGRESS ROCKET SPACE CENTRE</fullName>
            </value>
            <value>
                <fullName>ROCKET LAB</fullName>
            </value>
            <value>
                <fullName>SKYRORA</fullName>
            </value>
            <value>
                <fullName>SPACEX</fullName>
            </value>
            <value>
                <fullName>TBA</fullName>
            </value>
            <value>
                <fullName>VIRGIN ORBIT</fullName>
            </value>
            <value>
                <fullName>YUZHNOYE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>