force-app/main/default/objects/Asset__c/fields/VG_Rate_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>VG_Rate_Adjustment__c</fullName>
    <label>Rate Adjustment (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>