force-app/main/default/objects/Asset__c/fields/VG_Rate_Loading__c.field-meta.xml
<CustomField>
    <fullName>VG_Rate_Loading__c</fullName>
    <label>Rate Loading (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>