force-app/main/default/objects/Asset__c/fields/VG_RDSFamily__c.field-meta.xml
<CustomField>
    <fullName>VG_RDSFamily__c</fullName>
    <label>RDSFamily</label>
    <type>TextArea</type>
</CustomField>