force-app/main/default/objects/Asset__c/fields/VG_REG_NO_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>VG_REG_NO_Account_Name__c</fullName>
    <externalId>true</externalId>
    <label>Account_Name with RegNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>