force-app/main/default/objects/Asset__c/fields/VG_Satellite__c.field-meta.xml
<CustomField>
    <fullName>VG_Satellite__c</fullName>
    <label>Satellite</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>