force-app/main/default/objects/Asset__c/fields/VG_Satellite_EOL_Power__c.field-meta.xml
<CustomField>
    <fullName>VG_Satellite_EOL_Power__c</fullName>
    <label>Satellite EOL Power (W)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>