force-app/main/default/objects/Asset__c/fields/VG_Satellite_Family__c.field-meta.xml
<CustomField>
    <fullName>VG_Satellite_Family__c</fullName>
    <label>Satellite Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AIRBUS OTHER</fullName>
            </value>
            <value>
                <fullName>ALPHABUS</fullName>
            </value>
            <value>
                <fullName>AMOS HP</fullName>
            </value>
            <value>
                <fullName>ASTROBUS 100</fullName>
            </value>
            <value>
                <fullName>ASTROBUS 1000</fullName>
            </value>
            <value>
                <fullName>ASTROBUS 250</fullName>
            </value>
            <value>
                <fullName>ASTROSAT 500</fullName>
            </value>
            <value>
                <fullName>ATV</fullName>
            </value>
            <value>
                <fullName>BCP</fullName>
            </value>
            <value>
                <fullName>BCP 2000 (BGIS-2000</fullName>
            </value>
            <value>
                <fullName>BOEING 376HP</fullName>
            </value>
            <value>
                <fullName>BOEING 376W</fullName>
            </value>
            <value>
                <fullName>BOEING 601</fullName>
            </value>
            <value>
                <fullName>BOEING 601 (GOES-NP)</fullName>
            </value>
            <value>
                <fullName>BOEING 601 HP</fullName>
            </value>
            <value>
                <fullName>BOEING 601M</fullName>
            </value>
            <value>
                <fullName>BOEING 601 MODIFIED</fullName>
            </value>
            <value>
                <fullName>BOEING 702 CONCENTRATORS</fullName>
            </value>
            <value>
                <fullName>BOEING 702HP</fullName>
            </value>
            <value>
                <fullName>BOEING 702HP GEM</fullName>
            </value>
            <value>
                <fullName>BOEING 702HP MODIFIED</fullName>
            </value>
            <value>
                <fullName>boeing 702 mp</fullName>
            </value>
            <value>
                <fullName>BOEING 702 SP</fullName>
            </value>
            <value>
                <fullName>CAST OTHER</fullName>
            </value>
            <value>
                <fullName>CUBESAT 1.5U</fullName>
            </value>
            <value>
                <fullName>CUBESAT 12U</fullName>
            </value>
            <value>
                <fullName>CUBESAT 1U</fullName>
            </value>
            <value>
                <fullName>CUBESAT 2U</fullName>
            </value>
            <value>
                <fullName>CUBESAT 3U</fullName>
            </value>
            <value>
                <fullName>CUBESAT 5U</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>