force-app/main/default/objects/Asset__c/fields/VG_Satellite_Family_Base_rate__c.field-meta.xml
<CustomField>
    <fullName>VG_Satellite_Family_Base_rate__c</fullName>
    <label>Satellite Family Base rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>