force-app/main/default/objects/Asset__c/fields/VG_Satellite_Status__c.field-meta.xml
<CustomField>
    <fullName>VG_Satellite_Status__c</fullName>
    <label>Satellite Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Aware</fullName>
            </value>
            <value>
                <fullName>Backlog - Spacecraft Ordered</fullName>
            </value>
            <value>
                <fullName>Bound</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>CUO Review</fullName>
            </value>
            <value>
                <fullName>Expected renewal</fullName>
            </value>
            <value>
                <fullName>Future Launch</fullName>
            </value>
            <value>
                <fullName>Launch Failure</fullName>
            </value>
            <value>
                <fullName>Liberty Review</fullName>
            </value>
            <value>
                <fullName>NTU</fullName>
            </value>
            <value>
                <fullName>Operational</fullName>
            </value>
            <value>
                <fullName>Peer Review</fullName>
            </value>
            <value>
                <fullName>Quoted</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Reentered/deorbited</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Satellite Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>