force-app/main/default/objects/Asset__c/fields/VG_Smoke_and_heat_venting_system__c.field-meta.xml
<CustomField>
    <fullName>VG_Smoke_and_heat_venting_system__c</fullName>
    <label>Smoke and heat venting system?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Smoke and Heat</fullName>
            </value>
            <value>
                <fullName>Smoke or heat only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>