force-app/main/default/objects/Asset__c/fields/VG_Street__c.field-meta.xml
<CustomField>
    <fullName>VG_Street__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>