force-app/main/default/objects/Asset__c/fields/VG_Technical_Summary__c.field-meta.xml
<CustomField>
    <fullName>VG_Technical_Summary__c</fullName>
    <label>Technical Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>