force-app/main/default/objects/Asset__c/fields/VG_Total_Business_Interruption_SI__c.field-meta.xml
<CustomField>
    <fullName>VG_Total_Business_Interruption_SI__c</fullName>
    <label>Total Business Interruption SI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>