force-app/main/default/objects/Asset__c/fields/VG_Total_MBBISI_for_the_indemnity_period__c.field-meta.xml
<CustomField>
    <fullName>VG_Total_MBBISI_for_the_indemnity_period__c</fullName>
    <label>Total MBBISI (for the indemnity period)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>