force-app/main/default/objects/Asset__c/fields/VG_Total_Property_Damage_SI__c.field-meta.xml
<CustomField>
    <fullName>VG_Total_Property_Damage_SI__c</fullName>
    <formula>VG_Building_SI__c + VG_Machinery_SI__c + VG_Goods_SI__c + VG_Contents_SI__c + VG_Customer_Property_SI__c + VG_Other_SI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Property Damage SI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>