force-app/main/default/objects/Asset__c/fields/VG_Total_Sum_Insured_SI__c.field-meta.xml
<CustomField>
    <fullName>VG_Total_Sum_Insured_SI__c</fullName>
    <formula>VG_Total_Property_Damage_SI__c + VG_Total_Business_Interruption_SI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sum Insured SI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>