force-app/main/default/objects/Asset__c/fields/VG_True_TSI__c.field-meta.xml
<CustomField>
    <fullName>VG_True_TSI__c</fullName>
    <formula>(VG_Total_Property_Damage_SI__c  +  VG_Total_BISI_for_the_indemnity_period__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>True TSI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>