force-app/main/default/objects/Asset__c/fields/VG_Waiting_Period__c.field-meta.xml
<CustomField>
    <fullName>VG_Waiting_Period__c</fullName>
    <label>Waiting Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>120 Hours</fullName>
            </value>
            <value>
                <fullName>144 Hours</fullName>
            </value>
            <value>
                <fullName>168 Hours</fullName>
            </value>
            <value>
                <fullName>24 Hours</fullName>
            </value>
            <value>
                <fullName>48 Hours</fullName>
            </value>
            <value>
                <fullName>72 Hours</fullName>
            </value>
            <value>
                <fullName>96 Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>