force-app/main/default/objects/Asset__c/fields/VG_Wet_Mass__c.field-meta.xml
<CustomField>
    <fullName>VG_Wet_Mass__c</fullName>
    <label>Wet Mass (kg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>