force-app/main/default/objects/Asset__c/recordTypes/VG_Nordics_Property.recordType-meta.xml
<RecordType>
    <fullName>VG_Nordics_Property</fullName>
    <active>true</active>
    <label>Nordics Property</label>
</RecordType>